--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/bg.jpeg") top center;
+  background: url("../img/Cover.jpeg") top center;
   background-size: cover;
 }
 
@@ -251,7 +251,7 @@ h6 {
 
 #hero h1 {
   margin: 0 0 10px 0;
-  font-size: 64px;
+  font-size: 40px;
   font-weight: 700;
   line-height: 56px;
   color: #fff;
