--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -844,6 +844,7 @@ section {
   background: #fff;
   width: 100%;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 30px;
 }
 
 .contact .info i {
